@@ -42,7 +42,7 @@ specifier|public
 class|class
 name|TestSpanExplanations
 extends|extends
-name|TestExplanations
+name|BaseExplanationTestCase
 block|{
 comment|/* simple SpanTermQueries */
 DECL|method|testST1
